fix x overflow

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -8,6 +8,7 @@ html {
 body {
     font-family: 'Source Sans Pro', sans-serif;
     height: 100%;
+    width: 100%;
     position: relative;
 }
 
@@ -18,6 +19,7 @@ body {
     /* Submitty Logo blue */
     background-color: #f6fbfe;
 
+    width: 100%;
     /* A lighter shade of blue grey */
     /* background: #b8d5e5; */
     /* a gradient! */
@@ -948,6 +950,7 @@ table .instructor .two-options{
 #nav-body {
     margin-top: 15px;
     margin-left: 30px;
+    width: 0px;
     display: flex;
     flex-direction: column;
 }
